software/stacks/sample/app/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: sample
  labels:
    app: sample-api
    hostk8s.application: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sample-api
  template:
    metadata:
      labels:
        app: sample-api
        hostk8s.application: api
    spec:
      containers:
      - name: api
        image: mcr.microsoft.com/azurelinux/base/nodejs:20.14
        ports:
        - containerPort: 3000
        command:
        - sh
        - -c
        - |
          [...]
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        volumeMounts:
        - name: storage-volume
          mountPath: /app/storage
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: sample-api-storage
