software/stacks/sample/app/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
  namespace: sample
  labels:
    hostk8s.application: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: sample-api-tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sample-api
            port:
              number: 80
